Bug 54005. Test if frame CanContinueTextRun() before advancing to its sibling. r=karnaze, a=buster